<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagosActivity">

    <TextView
        android:id="@+id/tv5"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_money"
        android:drawablePadding="15dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/tv5"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/tv6"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/monto"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="MONTO DISPONIBLE"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv8"
        app:layout_constraintEnd_toStartOf="@+id/precio"
        app:layout_constraintHorizontal_bias="0.630"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv6"
        app:layout_constraintVertical_bias="0.500" />

    <TextView
        android:id="@+id/precio"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tv8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/monto"
        app:layout_constraintTop_toBottomOf="@+id/tv6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/tv8"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8">

        <androidx.cardview.widget.CardView
            android:id="@+id/agua"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#F0EEED"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            tools:ignore="DuplicateClickableBoundsCheck">

            <LinearLayout
                android:id="@+id/botonagua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:onClick="agua"
                android:orientation="vertical"
                tools:ignore="DuplicateClickableBoundsCheck">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iconImageView1"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_receipt_black_24dp"
                        android:backgroundTint="@color/Azul"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_margin="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@+id/iconImageView1"
                        android:layout_toRightOf="@+id/iconImageView1"
                        android:orientation="vertical">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/nameTextView1"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="60dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Agua"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/luz"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#F0EEED"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            tools:ignore="DuplicateClickableBoundsCheck">

            <LinearLayout
                android:id="@+id/botonluz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:onClick="luz"
                android:orientation="vertical"
                tools:ignore="DuplicateClickableBoundsCheck">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iconImageView2"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_receipt_black_24dp"
                        android:backgroundTint="@color/Amarillo"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp" />

                    <TextView
                        android:id="@+id/nameTextView2"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="60dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Luz"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/historial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/internet"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#F0EEED"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            tools:ignore="DuplicateClickableBoundsCheck">

            <LinearLayout
                android:id="@+id/botoninternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:onClick="internet"
                android:orientation="vertical"
                tools:ignore="DuplicateClickableBoundsCheck">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iconImageView3"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_receipt_black_24dp"
                        android:backgroundTint="@color/Verde"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp" />

                    <TextView
                        android:id="@+id/nameTextView3"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="60dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Internet"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/gas"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#F0EEED"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            tools:ignore="DuplicateClickableBoundsCheck">

            <LinearLayout
                android:id="@+id/botongas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:onClick="gas"
                android:orientation="vertical"
                tools:ignore="DuplicateClickableBoundsCheck">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iconImageView4"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_receipt_black_24dp"
                        android:backgroundTint="@color/Morado"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp" />

                    <TextView
                        android:id="@+id/nameTextView4"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="60dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="Gas"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#40d4a2"
        android:textSize="30dp"
        android:text="HISTORIAL"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <ListView
        android:id="@+id/list1"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historial" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>